# thetime

./: AUTHORS  NEWS  README  autogen.sh  configure.ac
src/: Makefile.am  thetime.1  thetime.c
